syntax = "proto3";

package test.llm.v1;

import "codegen/llm/v1/llm.proto";
import "google/protobuf/timestamp.proto";
import "google/type/date.proto";
import "google/type/postal_address.proto";

option go_package = "github.com/malonaz/core/genproto/test/llm";

// Some nested field.
message Contact {
  // The name of this contact.
  string name = 1;
}

// An analysis of a chat.
message ChatAnalysis {
  option (malonaz.core.codegen.llm.v1.opts).document = true;
  // A summary of this chat.
  string summary = 1;
  // An enum classifying this chat.
  ChatClassification classification = 2;
  // Caller namer.
  string caller_name = 3;
  // Email address.
  string email_address = 4;
  // The appointment availability.
  google.protobuf.Timestamp appointment = 5;
  // Postal address.
  google.type.PostalAddress postal_address = 6;
  // The date.
  google.type.Date date = 7;
  // Some contact.
  Contact contact = 8;
  // Some contact.
  Contact contact2 = 9 [(malonaz.core.codegen.llm.v1.field_opts).skip = true];

  // A brief 1-2 sentence summary of why they are calling.
  // Empty if call is aborted or called never speaks.
  StructuredData reason = 10;
}

// Represents structured data extracted from a chat.
message StructuredData {
  // The data collection identifier
  string id = 1 [(malonaz.core.codegen.llm.v1.field_opts).skip = true];

  // The JSON schema used for this field
  string json_schema = 2 [(malonaz.core.codegen.llm.v1.field_opts).skip = true];

  // Rationale for the extraction of this field.
  string rationale = 3;

  // The extracted value (stored as string, can be parsed based on schema)
  oneof value {
    // Set if it's a bool value.
    bool bool_value = 4;
    // Set if it's a string value.
    string string_value = 5;
    // Set if it's an int value.
    int64 int_value = 6;
  }
}

// Represents the classification of a chat.
enum ChatClassification {
  // Used to detect an unset field.
  CHAT_CLASSIFICATION_UNSPECIFIED = 0;

  // A known contact.
  CHAT_CLASSIFICATION_KNOWN_CONTACT = 1;

  // A legitimate lead.
  CHAT_CLASSIFICATION_LEAD = 2;

  // Likely spam or robocall.
  CHAT_CLASSIFICATION_SPAM = 3;

  // Telemarketing or unsolicited sales call
  CHAT_CLASSIFICATION_TELEMARKETING = 4;
}
